--- a/CentroBank/CentroBank.csproj
+++ b/CentroBank/CentroBank.csproj
@@ -67,10 +67,91 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\style.css" />
+    <Content Include="frmCreditosPersonales.aspx" />
+    <Content Include="frmCreditosVehiculos.aspx" />
+    <Content Include="frmCreditosVivienda.aspx" />
+    <Content Include="img\20200811215130.leasing-renting.jpg" />
+    <Content Include="img\20211105112646.carros-electricos.jpg" />
+    <Content Include="img\2919600.png" />
+    <Content Include="img\3078954.png" />
+    <Content Include="img\7-razones-por-las-que-comprar-un-lote-en-costa-rica-es-una-buena-idea - Copy.png" />
+    <Content Include="img\about-img.jpg" />
+    <Content Include="img\bancarización.jpg" />
+    <Content Include="img\bank.jpg" />
+    <Content Include="img\bank2.jpg" />
+    <Content Include="img\beneficios.jpg" />
+    <Content Include="img\cajero.png" />
+    <Content Include="img\calculos.jpg" />
+    <Content Include="img\calculosl.jpg" />
+    <Content Include="img\casallaes.jpg" />
+    <Content Include="img\casas.jfif" />
+    <Content Include="img\compracasa.jfif" />
+    <Content Include="img\consulta-deudas.jpg" />
+    <Content Include="img\credito-para-compra-de-vehiculo.jpg" />
+    <Content Include="img\creditos-especificos.jpg" />
+    <Content Include="img\depositphotos_30597729-stock-photo-hands-of-three-people-signing.jpg" />
+    <Content Include="img\depositphotos_3201090-stock-photo-computer-lab.jpg" />
+    <Content Include="img\DeudasOtraPersona.png" />
+    <Content Include="img\Foto-compra-carro.jpg" />
+    <Content Include="img\images.jpg" />
+    <Content Include="img\impacto-economia.jpg" />
+    <Content Include="img\indicadores-que-es.jpg" />
+    <Content Include="img\leasing2.jpg" />
+    <Content Include="img\logoCentroBank.png" />
+    <Content Include="img\lotes.jpg" />
+    <Content Include="img\m2.jpg" />
+    <Content Include="img\Minicred2.jpg" />
+    <Content Include="img\minicredito.jpg" />
+    <Content Include="img\multiproposito.jpg" />
+    <Content Include="img\persona-deudas.jpg" />
+    <Content Include="img\persona.jpg" />
+    <Content Include="img\prestamo vivienda.jpg" />
+    <Content Include="img\prestamospago deudas.jfif" />
+    <Content Include="img\prestamoviajes.jpg" />
+    <Content Include="img\primer-plano-persona-pensando-comprar-o-vender-casa_181624-24928.jpg" />
+    <Content Include="img\refinanciacion-de-hipotecas-900x600.jpg" />
+    <Content Include="img\requisitos %281%29.jpg" />
+    <Content Include="img\requisitos.jpg" />
+    <Content Include="img\translado.jpg" />
+    <Content Include="img\u2.jpg" />
+    <Content Include="img\unificacion deudas.jpg" />
+    <Content Include="img\usuarios.jpg" />
+    <Content Include="img\Vehiculos-Electricos.png" />
+    <Content Include="img\vehiculos.jpg" />
     <Content Include="Web.config" />
+    <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCreditosPersonales.aspx.cs">
+      <DependentUpon>frmCreditosPersonales.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmCreditosPersonales.aspx.designer.cs">
+      <DependentUpon>frmCreditosPersonales.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frmCreditosVehiculos.aspx.cs">
+      <DependentUpon>frmCreditosVehiculos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmCreditosVehiculos.aspx.designer.cs">
+      <DependentUpon>frmCreditosVehiculos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frmCreditosVivienda.aspx.cs">
+      <DependentUpon>frmCreditosVivienda.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmCreditosVivienda.aspx.designer.cs">
+      <DependentUpon>frmCreditosVivienda.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -81,6 +162,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
